--- a/Schlegel/code_vide/1. Manipuler/6. Jupyter, numpy et scipy.ipynb
+++ b/Schlegel/code_vide/1. Manipuler/6. Jupyter, numpy et scipy.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,10 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "a = 5\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -56,10 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,23 +76,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1,  2,  3,  4],\n",
-       "       [ 5,  6,  7,  8],\n",
-       "       [ 9, 10, 11, 12]])"
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [7, 8, 9]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "m = np.array([[1,2,3],\n",
+    "             [4,5,6],\n",
+    "             [7,8,9]\n",
+    "             ])\n",
+    "m"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,23 +109,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0,  1,  2,  3,  4],\n",
-       "       [ 5,  6,  7,  8,  9],\n",
-       "       [10, 11, 12, 13, 14]])"
+       "array([2, 5, 8])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "m[:, 1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,21 +139,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 2, 3, 4])"
+       "dtype('int64')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "m.dtype"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -211,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
