--- a/Schlegel/code_vide/1. Manipuler/8. pandas, matplotlib, seaborn.ipynb
+++ b/Schlegel/code_vide/1. Manipuler/8. pandas, matplotlib, seaborn.ipynb
@@ -24,7 +24,9 @@
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -238,12 +240,15 @@
        "[392 rows x 9 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "donnees = pd.read_csv(\"Automobile.csv\", sep= \",\")\n",
+    "donnees"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -258,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -282,6 +287,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>name</th>\n",
        "      <th>mpg</th>\n",
        "      <th>cylinders</th>\n",
        "      <th>displacement</th>\n",
@@ -289,121 +295,100 @@
        "      <th>weight</th>\n",
        "      <th>acceleration</th>\n",
        "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>392.000000</td>\n",
-       "      <td>392.000000</td>\n",
-       "      <td>392.000000</td>\n",
-       "      <td>392.000000</td>\n",
-       "      <td>392.000000</td>\n",
-       "      <td>392.000000</td>\n",
-       "      <td>392.000000</td>\n",
+       "      <th>0</th>\n",
+       "      <td>chevrolet chevelle malibu</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>23.445918</td>\n",
-       "      <td>5.471939</td>\n",
-       "      <td>194.411990</td>\n",
-       "      <td>104.469388</td>\n",
-       "      <td>2977.584184</td>\n",
-       "      <td>15.541327</td>\n",
-       "      <td>75.979592</td>\n",
+       "      <th>1</th>\n",
+       "      <td>buick skylark 320</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>165</td>\n",
+       "      <td>3693</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>7.805007</td>\n",
-       "      <td>1.705783</td>\n",
-       "      <td>104.644004</td>\n",
-       "      <td>38.491160</td>\n",
-       "      <td>849.402560</td>\n",
-       "      <td>2.758864</td>\n",
-       "      <td>3.683737</td>\n",
+       "      <th>2</th>\n",
+       "      <td>plymouth satellite</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>68.000000</td>\n",
-       "      <td>46.000000</td>\n",
-       "      <td>1613.000000</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>70.000000</td>\n",
+       "      <th>3</th>\n",
+       "      <td>amc rebel sst</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3433</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>17.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>105.000000</td>\n",
-       "      <td>75.000000</td>\n",
-       "      <td>2225.250000</td>\n",
-       "      <td>13.775000</td>\n",
-       "      <td>73.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>22.750000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>151.000000</td>\n",
-       "      <td>93.500000</td>\n",
-       "      <td>2803.500000</td>\n",
-       "      <td>15.500000</td>\n",
-       "      <td>76.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>29.000000</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>275.750000</td>\n",
-       "      <td>126.000000</td>\n",
-       "      <td>3614.750000</td>\n",
-       "      <td>17.025000</td>\n",
-       "      <td>79.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>46.600000</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>455.000000</td>\n",
-       "      <td>230.000000</td>\n",
-       "      <td>5140.000000</td>\n",
-       "      <td>24.800000</td>\n",
-       "      <td>82.000000</td>\n",
+       "      <th>4</th>\n",
+       "      <td>ford torino</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>3449</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              mpg   cylinders  displacement  horsepower       weight  \\\n",
-       "count  392.000000  392.000000    392.000000  392.000000   392.000000   \n",
-       "mean    23.445918    5.471939    194.411990  104.469388  2977.584184   \n",
-       "std      7.805007    1.705783    104.644004   38.491160   849.402560   \n",
-       "min      9.000000    3.000000     68.000000   46.000000  1613.000000   \n",
-       "25%     17.000000    4.000000    105.000000   75.000000  2225.250000   \n",
-       "50%     22.750000    4.000000    151.000000   93.500000  2803.500000   \n",
-       "75%     29.000000    8.000000    275.750000  126.000000  3614.750000   \n",
-       "max     46.600000    8.000000    455.000000  230.000000  5140.000000   \n",
+       "                        name   mpg  cylinders  displacement  horsepower  \\\n",
+       "0  chevrolet chevelle malibu  18.0          8         307.0         130   \n",
+       "1          buick skylark 320  15.0          8         350.0         165   \n",
+       "2         plymouth satellite  18.0          8         318.0         150   \n",
+       "3              amc rebel sst  16.0          8         304.0         150   \n",
+       "4                ford torino  17.0          8         302.0         140   \n",
        "\n",
-       "       acceleration  model_year  \n",
-       "count    392.000000  392.000000  \n",
-       "mean      15.541327   75.979592  \n",
-       "std        2.758864    3.683737  \n",
-       "min        8.000000   70.000000  \n",
-       "25%       13.775000   73.000000  \n",
-       "50%       15.500000   76.000000  \n",
-       "75%       17.025000   79.000000  \n",
-       "max       24.800000   82.000000  "
+       "   weight  acceleration  model_year origin  \n",
+       "0    3504          12.0          70    usa  \n",
+       "1    3693          11.5          70    usa  \n",
+       "2    3436          11.0          70    usa  \n",
+       "3    3433          12.0          70    usa  \n",
+       "4    3449          10.5          70    usa  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "donnees.shape\n",
+    "donnees.columns\n",
+    "donnees.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -418,26 +403,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>429.0</td>\n",
+       "      <td>198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>454.0</td>\n",
+       "      <td>220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>440.0</td>\n",
+       "      <td>215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>455.0</td>\n",
+       "      <td>225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>390.0</td>\n",
+       "      <td>190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>383.0</td>\n",
+       "      <td>170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>340.0</td>\n",
+       "      <td>160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>400.0</td>\n",
+       "      <td>150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>455.0</td>\n",
+       "      <td>225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>113.0</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "5    198\n",
-       "6    220\n",
-       "7    215\n",
-       "8    225\n",
-       "9    190\n",
-       "Name: horsepower, dtype: int64"
+       "    displacement  horsepower\n",
+       "5          429.0         198\n",
+       "6          454.0         220\n",
+       "7          440.0         215\n",
+       "8          455.0         225\n",
+       "9          390.0         190\n",
+       "10         383.0         170\n",
+       "11         340.0         160\n",
+       "12         400.0         150\n",
+       "13         455.0         225\n",
+       "14         113.0          95"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "donnees['horsepower'][5:10]\n",
+    "donnees.iloc[5:15, 3:5]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -812,7 +883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
